# MINORg

./: Dockerfile  Dockerfile-full  Dockerfile-lite  LICENSE  MANIFEST.in  MANUAL_find_gRNA.1  MANUAL_find_gRNA.2  README  README.md  build_minorg.sh  config.ini  display.py  exceptions.py  extend_genome.py  extract_homologue.py  filter_grna.py  find_gRNA.sh  functions.py  log.py  logger.py  make_log.py  minimum_set.py  minorg.py  minorg.toml  parse_config.py  pyproject.toml  pyproject_py.toml  setup.py  structure.txt  subcmd_filter.py  subcmd_grna.py  subcmd_homologue.py  subcmd_minimumset.py  subcmd_minorg.py  update_dockerfile.py
docs/: Makefile  index.html  make.bat
examples/: arabidopsis_genomes.txt  athaliana_genomes.txt  cluster_mapping.txt  config.ini  example_executions.sh  sample_config.ini  sample_custom_check.map  sample_gene.fasta  subset_9654.fasta  subset_9947.fasta  subset_genome_mapping.relict.txt  subset_genome_mapping.txt  subset_ref.bed  subset_ref.fasta  subset_ref.gff  subset_ref_Araha1.fasta.fai  subset_ref_Araly2.fasta  subset_ref_Araly2.fasta.fai  subset_ref_Araly2.gff  subset_ref_Araport11.fasta.fai  subset_ref_TAIR10.fasta.fai  subset_ref_irgsp.fasta  subset_ref_irgsp.gff  subset_ref_yeast_mt.fasta  subset_ref_yeast_mt.gff  vdw_mapping.txt
examples_for_docker/: arabidopsis_genomes.txt  athaliana_genomes.txt  sample_CDS.fasta  sample_config.ini  sample_exclude_RPS6.fasta  subset_9655.fasta  subset_9944.fasta  subset_cluster_mapping.txt  subset_genome_mapping.relict.txt  subset_genome_mapping.txt  subset_nonref.fasta  subset_ref_Araha1.fasta  (+5 more)
(+94 files in other folders)
